name: CoreErlang
version: 0.0.5
copyright: 2008, David Castro Pérez, Henrique Ferreiro García
license: BSD3
license-file: LICENSE
author:	David Castro Pérez <dcastrop@udc.es>
        Henrique Ferreiro García <hferreiro@udc.es>
maintainer:
        Alex Kropivny <alex.kropivny@gmail.com>
        Feng Lee <feng@emqx.io>
homepage: http://github.com/hamler-lang/CoreErlang
category: Language
synopsis: Manipulating Core Erlang source code
description:
        Facilities for manipulating Core Erlang source code:
        an abstract syntax, parser and pretty-printer.
build-type: Simple
cabal-version: >= 1.6

extra-source-files:
    LICENSE
    README.md

library
  hs-source-dirs:
      src
  exposed-modules:
        Language.CoreErlang.Parser,
        Language.CoreErlang.Pretty,
        Language.CoreErlang.Syntax
  build-depends:
        base >=4.11 && <=4.13,
        pretty >=1.1 && <1.2,
        parsec >=3.1 && <3.2
  other-extensions:
        DeriveDataTypeable
        LambdaCase

source-repository head
  type:     git
  location: https://github.com/hamler-lang/CoreErlang.git

