name: CoreErlang
version: 0.0.5
copyright: 2008, David Castro Pérez, Henrique Ferreiro García
license: BSD3
license-file: LICENSE
author:	David Castro Pérez <dcastrop@udc.es>
        Henrique Ferreiro García <hferreiro@udc.es>
maintainer:	
        Alex Kropivny <alex.kropivny@gmail.com>
homepage: http://github.com/amtal/CoreErlang
category: Language
synopsis: Manipulating Core Erlang source code
description:
        Facilities for manipulating Core Erlang source code:
        an abstract syntax, parser and pretty-printer.
build-type: Simple
cabal-version: >= 1.6

extra-source-files:
    AUTHORS LICENSE

library
  exposed-modules:
        Language.CoreErlang.Parser,
        Language.CoreErlang.Pretty,
        Language.CoreErlang.Syntax
  build-depends:       
        base >=4.8 && < 5,
        pretty >=1.1 && <1.2, 
        parsec >=3.1 && <3.2
  other-extensions:    DeriveDataTypeable

source-repository head
  type:     git
  location: https://github.com/amtal/CoreErlang.git
